--- a/build.xml
+++ b/build.xml
@@ -6,9 +6,9 @@
     <description>Builds, tests, and runs the project com.cubes.</description>
     <import file="nbproject/build-impl.xml"/>
     <target name="init" depends="basic-init,files-init,build-init,-javac-init,-build-subproject"/>
-    <target name="-build-subproject">
+    <!--<target name="-build-subproject">
         <ant dir="../../Cubes" inheritall="false" target="jar"/>
         <copy file="../../Cubes/dist/Cubes.jar" todir="release/libs"/>
         <copy file="../../Cubes/dist/lib/cubes-assets.jar" todir="release/libs"/>
-    </target>
+    </target>-->
 </project>
