--- a/src/com/cubes/Bundle.properties
+++ b/src/com/cubes/Bundle.properties
@@ -1,7 +1,7 @@
 cubes=Cubes
 OpenIDE-Module-Display-Category=jME3 - Library
 OpenIDE-Module-Long-Description=\
-    As the title says, "Cubes" is a framework for block worlds (also called "bloxel" or "minecraft-like") - It offers an easy way to add/remove blocks, block skinning, useful tools and user-specific behaviours. \
+    "Cubes" is a framework for block worlds (also called "bloxel" or "minecraft-like") - It offers an easy way to add/remove blocks, block skinning, useful tools and user-specific behaviours. \
     "Cubes" itself will not contain tools for creating crafting or RPG functionalities, it will only help you managing the block system.
 OpenIDE-Module-Name=Cubes
 OpenIDE-Module-Short-Description=Block World Framework
