--- a/Cubes/build.xml
+++ b/Cubes/build.xml
@@ -73,8 +73,8 @@
 
     -->
     
-    <target name="-post-jar">
+    <!--<target name="-post-jar">
         <copy file="./dist/Cubes.jar" todir="../CubesModule/cubes/release/libs/"/>
         <copy file="./dist/lib/cubes-assets.jar" todir="../CubesModule/cubes/release/libs/"/>
-    </target>
+    </target>-->
 </project>
