Add slicing support

--- a/Cubes/nbproject/project.properties
+++ b/Cubes/nbproject/project.properties
@@ -78,7 +78,7 @@ manifest.file=MANIFEST.MF
 mkdist.disabled=false
 mobile.android.package=com.destroflyer.cubestest
 mobile.android.target=android-10
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
